--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
 </head>
 <body>
-  <section class="menu cid-s2OKzwV0u5" once="menu" id="menu1-2k">
+  <section class="menu cid-s5jyz1ufZa" once="menu" id="menu1-38">
 
     
 
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="carousel slide cid-s2IOkizFks" data-interval="false" id="slider1-2j">
 
     
 
@@ -125,7 +125,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3"><strong>Address</strong></h5>
-                <p class="mbr-text">Korusu<br>30, Bankside<br>Kidlington<br>Oxford</p>
+                <p class="mbr-text">Korusu<br>30, Bankside<br>Kidlington<br>Oxford&nbsp;OX5 1JE<br>UK</p>
             </div>
         </div>
         <div class="footer-lower">
